init serv